--- a/images/chieu-cay-cao-bang-a-14/config.ini
+++ b/images/chieu-cay-cao-bang-a-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-14.html
 lastopen = 2024-06-09 23:41:44
 
 [search]
-lastsearch = 2024-07-31 01:25:20
+lastsearch = 2024-07-31 04:34:30
 
 [demxanh.com]
 match = -60.9%%
 title = Cách phân biệt các loại chiếu trúc thanh Cao Bằng Cao Sơn
-url = https://demxanh.com/cach-phan-biet-cac-loai-chieu-truc-thanh-cao-bang-cao-son.html
+url = https://demxanh.com/cach-phan-biet-cac-loai-chieu-truc-thanh-cao-bang-cao-son.html?srsltid=AfmBOoqxreyUzj2kZQw7yIB_GciHDKIjuSfcxMsMLnwf7nh6JYUIyF1k
 
 [www.lazada.vn]
 match = 47.8%%
 title = Chiếu Trúc cao bằng 1.4 X 1.95
-url = https://www.lazada.vn/products/chieu-truc-cao-bang-14-x-195-i2173944158.html
+url = https://www.lazada.vn/products/chieu-truc-cao-bang-14-x-195-i2173944158.html?srsltid=AfmBOooRqlcKPqPVE9mXv3jngHFgpBTHbsBPGH61zSV67afclM-ANz8j
 
 [shopee.vn]
 match = -69.6%%
@@ -27,14 +27,14 @@ title = Chiếu trúc Cao Bằng Cao Sơn chất lượng cao - Lombomshop!
 url = https://lombom.com/chieu-truc-cao-bang-cao-son/
 
 [www.diepxuan.com]
-match = 26.1%%
-title = Chiếu cây Cao Bằng A 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-140x190.html
+match = 21.7%%
+title = Chiếu cây Cao Bằng A 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-180x200.html?srsltid=AfmBOopZWHnLwinda36VmFWfzJte9QTG-5bH-T-hjatZ_KJ9bVd5209m
 
 [chieutrucsaigon.com]
-match = -13.0%%
-title = TÌM HIỂU CHIẾU TRÚC CAO BẰNG BÁN TẠI SÀI GÒN
-url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/tim-hieu-chieu-truc-cao-bang-ban-tai-sai-gon-59.html
+match = -17.4%%
+title = CHIẾU TRÚC CAO BẰNG CHÍNH HÃNG ĐƯỢC BÁN Ở ...
+url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-truc-cao-bang-chinh-hang-duoc-ban-o-dau-71.html
 
 [khodem.vn]
 match = -56.5%%
