--- a/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-co-goi-14.html
 lastopen = 2024-06-09 22:25:57
 
 [search]
-lastsearch = 2024-07-31 01:34:47
+lastsearch = 2024-07-31 04:25:38
 
 [shopee.vn]
-match = -25.0%%
-title = Chiếu mây điều hòa lót lụa cao cấp có chun bo góc giúp cố ...
-url = https://shopee.vn/Chiếu-mây-điều-hòa-lót-lụa-cao-cấp-có-chun-bo-góc-giúp-cố-định-chiếu-Chiếu-điều-hoà-sợi-mây-viền-lụa-thoáng-khí-tốt-i.472596491.13662110393
+match = -21.4%%
+title = Chiếu điều hòa cao su non coco mẫu mới 2024 tặng kèm 2 ...
+url = https://shopee.vn/Chiếu-điều-hòa-cao-su-non-coco-mẫu-mới-2024-tặng-kèm-2-vỏ-gối-Ga-cao-su-non-điều-hòa-đủ-kích-thước-i.891230701.25266141134
 
 [chieutrelanlan.com]
 match = 19.0%%
@@ -24,7 +24,7 @@ url = https://goni.vn/chieu-dieu-hoa-goni/
 [demxanh.com]
 match = -7.1%%
 title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+url = https://demxanh.com/chieu-dieu-hoa.html?srsltid=AfmBOoqxcDiPqqfWTJiQaoo_AICBfyZDQTumikJhNKk3sE0b_YL4bjgS
 
 [tiki.vn]
 match = 28.6%%
@@ -34,7 +34,7 @@ url = https://tiki.vn/blog/chieu-dieu-hoa/
 [sieuthidem.vn]
 match = 32.1%%
 title = Bộ chiếu điều hoà Tencel TC01 - Hà Nội
-url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/
+url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/?srsltid=AfmBOoqkF9o_mI5nbIei9l857Fs7AB9XawjPBcqTx2K1n7L2xoiujach
 
 [kyoryo.vn]
 match = -35.7%%
@@ -99,7 +99,7 @@ url = https://lybalansieucute.com/chieu-dieu-hoa-noi-dia-nanjiren-11-18
 [vtvhyundai.vn]
 match = -14.3%%
 title = RUITON - Chiếu điều hoà 1m6 x 2m (Kèm 2 vỏ gối cao su)
-url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691
+url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691?srsltid=AfmBOooXm8ntlcPgb0wVZLJFCRESoMlSAqwLFh6JqJwj6GhbFAPhQTTl
 
 [noithattana.vn]
 match = 21.4%%
