--- a/images/chieu-lac-gam-12/config.ini
+++ b/images/chieu-lac-gam-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-12.html
 lastopen = 2024-06-06 16:54:12
 
 [search]
-lastsearch = 2024-07-30 21:12:03
+lastsearch = 2024-07-31 04:27:00
 
 [www.diepxuan.com]
 match = 62.5%%
@@ -317,9 +317,9 @@ title = Chiếu Lác 1m6 2m Giá Tốt T05/2024 | Mua tại Lazada.vn
 url = https://www.lazada.vn/tag/chiếu-lác-1m6-2m/
 
 [yato.vn]
-match = -175.0%%
-title = Bộ Cờ Lê Đảo Chiều Lắc Léo 12 Chi Tiết 8-19mm Yato YT ...
-url = https://yato.vn/bo-co-le-vong-mieng-dao-chieu-12-chi-tiet-8-19mm-yato-yt-16968-p13885
+match = -50.0%%
+title = Bộ cờ lê vòng miệng - Yato.vn
+url = https://yato.vn/bo-co-le-vong-mieng-cp413
 
 [baothaibinh.com.vn]
 match = -200.0%%
