--- a/images/chieu-truc-cong-ty-16-19/config.ini
+++ b/images/chieu-truc-cong-ty-16-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-19.html
 lastopen = 2024-06-07 00:18:26
 
 [search]
-lastsearch = 2024-07-30 21:50:36
+lastsearch = 2024-07-31 04:26:39
 
 [chieutrelanlan.com]
 match = -37.5%%
@@ -17,8 +17,8 @@ title = Chiếu Trúc Giá Bao Nhiêu?
 url = https://chanrathanhthuy.com/tin-tuc/chieu-truc-gia-bao-nhieu-1132.html
 
 [www.facebook.com]
-match = 8.3%%
-title = CHIẾU TRE TRÚC HCM | Ho Chi Minh City
+match = 22.2%%
+title = CHIẾU TRE TRÚC HCM
 url = https://www.facebook.com/chieutructot/?locale=vi_VN
 
 [www.yellowpages.vn]
@@ -33,8 +33,8 @@ url = https://shopee.vn/list/chiếu/trúc/1m6
 
 [chieutrucsaigon.com]
 match = 8.3%%
-title = MUA CHIẾU TRÚC CHÍNH HÃNG QUẬN TÂN BÌNH
-url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/mua-chieu-truc-quan-tan-binh-76.html
+title = CHIẾU TRÚC VIỆT NAM CHẤT LƯỢNG RA SAO?
+url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-truc-viet-nam-chat-luong-ra-sao-128.html
 
 [www.lazada.vn]
 match = -62.5%%
