--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-31 02:19:26
+lastsearch = 2024-07-31 04:27:21
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -32,14 +32,14 @@ title = Anthony Edwards (basketball)
 url = https://en.wikipedia.org/wiki/Anthony_Edwards_(basketball)
 
 [www.facebook.com]
-match = -61.5%%
-title = Northwest Georgia Scanner
-url = https://www.facebook.com/NWGAScanner/
+match = -84.6%%
+title = 3:16 Healthcare | Bremen GA
+url = https://www.facebook.com/316Healthcare/
 
 [www.youtube.com]
-match = -230.8%%
-title = The Gummy Bear Song - Long English Version - Gummibär
-url = https://www.youtube.com/watch?v=mB1PuesGGBc
+match = -146.2%%
+title = The Gummy Bear Song - Long English Version
+url = https://www.youtube.com/watch?v=astISOttCQ0
 
 [www.regmovies.com]
 match = -215.4%%
@@ -277,8 +277,8 @@ title = Ginny & Georgia (TV Series 2021
 url = https://www.imdb.com/title/tt10813940/
 
 [ottawabraves.com]
-match = -284.6%%
-title = Women's Flag Football vs Thomas University (Ga.) on 3/16 ...
+match = -292.3%%
+title = Women's Flag Football vs Thomas University (Ga.) on 3/16/2024
 url = https://ottawabraves.com/sports/womens-flag-football/stats/2024/thomas-university-ga-/boxscore/9867
 
 [www.soccerwire.com]
@@ -352,9 +352,9 @@ title = Charlie Condon - 2024 Baseball Roster
 url = https://georgiadogs.com/sports/baseball/roster/charlie-condon/7496
 
 [www.nature.com]
-match = -238.5%%
-title = Archaean multi-stage magmatic underplating drove ...
-url = https://www.nature.com/articles/s41467-024-50435-5
+match = -230.8%%
+title = 68 Ga generator based on nano-SnO 2 for PET imaging
+url = https://www.nature.com/articles/s41598-020-69659-8
 
 [www.dictionary.com]
 match = 0.0%%
