--- a/images/tui-warmdream-16/config.ini
+++ b/images/tui-warmdream-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-16.html
 lastopen = 2024-06-10 01:14:08
 
 [search]
-lastsearch = 2024-07-31 03:16:09
+lastsearch = 2024-07-31 04:30:10
 
 [www.tiktok.com]
-match = -181.2%%
-title = use my discount code AYASCHANNEL1 on @YesStyle ...
-url = https://www.tiktok.com/@ayas.channel/video/7311712186034851078
+match = -200.0%%
+title = obessed with this 90’s brown lip duo by @Huda Beauty ...
+url = https://www.tiktok.com/@andrearomanofficial/video/7384118842538200353
 
 [digitalmaine.com]
 match = -75.0%%
