--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-24-23.html
 lastopen = 2024-06-10 00:37:18
 
 [search]
-lastsearch = 2024-07-31 03:55:25
+lastsearch = 2024-07-31 04:32:31
 
 [gobearcats.com]
 match = -142.1%%
@@ -77,8 +77,8 @@ title = Sandra Oh (@iamsandraohinsta)
 url = https://www.instagram.com/iamsandraohinsta/?hl=en
 
 [medboard.nv.gov]
-match = -100.0%%
-title = Disciplinary Actions - Medical Examiners Board
+match = -121.1%%
+title = Disciplinary Actions - Board of Medical Examiners
 url = https://medboard.nv.gov/Patients/Disciplinary/DisciplinaryActions/
 
 [www.facesofsuicide.com]
@@ -132,9 +132,9 @@ title = licensed-electricians.pdf
 url = https://home.nyc.gov/assets/buildings/pdf/licensed-electricians.pdf
 
 [profiles.ucsd.edu]
-match = -21.1%%
-title = Karen Messer | UCSD Profiles
-url = https://profiles.ucsd.edu/karen.messer
+match = -10.5%%
+title = Gary Vilke - UCSD Profiles
+url = https://profiles.ucsd.edu/gary.vilke
 
 [som.cuanschutz.edu]
 match = -110.5%%
