--- a/images/bo-bon-mua-chun-chan-182m/config.ini
+++ b/images/bo-bon-mua-chun-chan-182m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-182m.html
 lastopen = 2024-06-07 00:25:46
 
 [search]
-lastsearch = 2024-07-31 07:49:17
+lastsearch = 2024-07-31 10:34:14
 
 [everon.online]
 match = 12.0%%
@@ -12,9 +12,9 @@ title = Bộ Ga Chun Chần Everon Bốn Mùa ...
 url = https://everon.online/collections/bo-ga-chun-chan-bon-mua-everon
 
 [everonchinhhang.vn]
-match = -32.0%%
-title = Bộ chăn bốn mùa Dòng Thời Gian - EPT24081 - Everon
-url = https://everonchinhhang.vn/products/bo-chan-bon-mua-dong-thoi-gian-ept24081
+match = -24.0%%
+title = Bộ chăn bốn mùa Chân Trời Xanh - ESM24014 - Everon
+url = https://everonchinhhang.vn/products/bo-chan-bon-mua-chan-troi-xanh-esm24014
 
 [everonvn.com.vn]
 match = 28.0%%
@@ -152,9 +152,9 @@ title = Mẹ già U70 cõng con trai cao 1,82m suốt 5 năm, cố tập cho ...
 url = https://vietbao.vn/me-gia-u70-cong-con-trai-cao-1-82m-suot-5-nam-co-tap-cho-con-di-bo-491194.html
 
 [m.facebook.com]
-match = 20.0%%
-title = Hội Mua Bán Chung Cư Hà Nội Giá Rẻ
-url = https://m.facebook.com/groups/386614282654291/posts/1025219878793725/
+match = -24.0%%
+title = GROUP MUA BÁN CHO THUÊ CĂN HỘ CHUNG CƯ CAO ...
+url = https://m.facebook.com/groups/113376572654593/posts/1443568039635433/
 
 [dantri.com.vn]
 match = -60.0%%
