--- a/images/chieu-du-lich-18/config.ini
+++ b/images/chieu-du-lich-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lich-18.html
 lastopen = 2024-06-09 21:46:31
 
 [search]
-lastsearch = 2024-07-31 09:47:28
+lastsearch = 2024-07-31 10:39:09
 
 [helloviettravel.com]
 match = -181.2%%
@@ -32,9 +32,9 @@ title = Du Lịch USA và Thế Giới
 url = https://www.facebook.com/groups/dulichusavathegioi/
 
 [vinpearl.com]
-match = -156.2%%
-title = Hé lộ “tọa độ” 18 địa điểm du lịch Nghệ An HOT nhất!
-url = https://vinpearl.com/vi/he-lo-toa-do-18-dia-diem-du-lich-nghe-an-hot-nhat
+match = -187.5%%
+title = Điểm du lịch Khánh Hòa – List 18 “TỌA ĐỘ” không thể bỏ ...
+url = https://vinpearl.com/vi/list-18-diem-du-lich-khanh-hoa-dep-xieu-long-khong-the-bo-qua
 
 [thegioixecau.vn]
 match = -150.0%%
@@ -159,7 +159,7 @@ url = https://momo.vn/blog/dia-diem-du-lich-nha-trang-c101dt870
 [vietmytravel.com]
 match = -187.5%%
 title = Du Lịch Mỹ Kết Hợp Thăm Thân Nhân 2024 chỉ với 39tr900
-url = https://vietmytravel.com/tour/tour-du-lich-my-tham-than/?srsltid=AfmBOoprNe3mkUKn4Va928z1ZayVSWDBA-MzxN3myVrbMQ-tR8tQA_f3
+url = https://vietmytravel.com/tour/tour-du-lich-my-tham-than/
 
 [visana.vn]
 match = -212.5%%
