--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-12.html
 lastopen = 2024-06-21 05:09:22
 
 [search]
-lastsearch = 2024-07-31 05:15:19
+lastsearch = 2024-07-31 10:41:57
 
 [agasound.vn]
 match = 6.7%%
@@ -27,9 +27,9 @@ title = AALTO - YOUR CELEBRATING SPOT IN D2! 🎉 It's the end ...
 url = https://www.instagram.com/aalto.vn/p/CmGX0BkvJ0r/
 
 [www.facebook.com]
-match = -80.0%%
-title = Rạp Chiếu Phim Cũ | Ho Chi Minh City
-url = https://www.facebook.com/phimhaygiare/
+match = -220.0%%
+title = Dookki Vietnam - 🍴Buffet Tokbokki siêu HOT khu D2 Bình...
+url = https://www.facebook.com/DookkiVietnam/posts/buffet-tokbokki-siêu-hot-khu-d2-bình-thạnh-dookki-buffet-139-141-nguyễn-gia-trí-/2301597160110405/
 
 [grandpark-vinhomes.com]
 match = -186.7%%
@@ -54,7 +54,7 @@ url = https://www.lineabon.vn/product-page/lineabon-d3k2
 [www.diepxuan.com]
 match = 33.3%%
 title = Điệp Xuân Chiếu lác D2 12
-url = https://www.diepxuan.com/chieu-lac-d2-12.html?srsltid=AfmBOoprOQRwPa1xISzmD1Ox-Co4as7BBjg2Zy8OWgJ5wAvrkH-5e1lm
+url = https://www.diepxuan.com/chieu-lac-d2-12.html
 
 [shopee.vn]
 match = -146.7%%
