--- a/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
+++ b/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-gia-thai-2m.html
 lastopen = 2024-06-09 23:51:45
 
 [search]
-lastsearch = 2024-07-31 08:41:53
+lastsearch = 2024-07-31 10:45:24
 
 [shopee.vn]
 match = 0.0%%
@@ -27,14 +27,14 @@ title = Chiếu nhựa việt nam 2mx4m hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chiếu nhựa việt nam 2mx4m
 
 [www.facebook.com]
-match = 26.3%%
-title = Chiếu Nhựa Thái Lan
-url = https://www.facebook.com/chieunhuathailan/
+match = 31.0%%
+title = Chiếu Cói Thái Bình Rẻ Nhất Hà Nội
+url = https://www.facebook.com/chieucoithaibinhrenhathanoi/
 
 [www.sendo.vn]
-match = 0.0%%
-title = Chiếu Nhựa Thái Lan Hàng Xịn, Giá Xuất Xưởng, Với ...
-url = https://www.sendo.vn/chieu-nhua-thai-lan.htm
+match = -17.2%%
+title = Chiếu nhựa hàng Thái chất lượng cao m8 2m [Được kiểm ...
+url = https://www.sendo.vn/chieu-nhua-hang-thai-chat-luong-cao-m8-2m-duo-c-kie-m-ha-ng-16392961-116708484.html?source_block_id=feed&source_page_id=search&source_info=pwa_60_1715558400321_undefined_-1_cateLvl2_0_117_23_-1
 
 [chieuvietbac.blogspot.com]
 match = -20.7%%
