--- a/images/chieu-truc-cong-ty-16-20/config.ini
+++ b/images/chieu-truc-cong-ty-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-20.html
 lastopen = 2024-06-09 23:50:30
 
 [search]
-lastsearch = 2024-07-31 08:47:21
+lastsearch = 2024-07-31 10:46:05
 
 [chieutrelanlan.com]
 match = -41.7%%
@@ -47,9 +47,9 @@ title = Phân phối chiếu trúc Việt Nam giá rẻ tại Hà Nội
 url = https://thegioichieutruc.com/
 
 [www.youtube.com]
-match = -120.8%%
-title = FULL TRẬN | Carlo Biado vs Wiktor Zielinski | Last 16 | GIẢI ...
-url = https://www.youtube.com/watch?v=KTfTvlPEy1o
+match = -95.8%%
+title = Quy trình sản xuất chiếu trúc tre Việt Nam - Phổ Mến Thái Bình
+url = https://www.youtube.com/watch?v=hOk5gnWzPhc
 
 [www.facebook.com]
 match = 8.3%%
@@ -79,7 +79,7 @@ url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-vo-gam.html
 [demxanh.com]
 match = 25.0%%
 title = Chiếu trúc hạt Hương Trúc nâu cà phê
-url = https://demxanh.com/chieu-truc-hat-huong-truc-nau.html?srsltid=AfmBOooDqgSS6Bw1A1zsgFMSZKADHwOLO7lDdc1U10UET0rGU5Me9QUd
+url = https://demxanh.com/chieu-truc-hat-huong-truc-nau.html
 
 [www.diepxuan.com]
 match = 100.0%%
