--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-07-31 07:53:32
+lastsearch = 2024-07-31 10:44:44
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -12,9 +12,9 @@ title = Rights and Responsibilities of Association Board Members
 url = https://idfpr.illinois.gov/content/dam/soi/en/web/idfpr/ccico/pdfs/rights-and-responsibilities-of-association-board-members.pdf
 
 [www.reddit.com]
-match = -35.3%%
-title = Can HOA come onto my property?
-url = https://www.reddit.com/r/HOA/comments/xqmjl8/can_hoa_come_onto_my_property/
+match = -64.7%%
+title = How I gutted my HOA : r/pettyrevenge
+url = https://www.reddit.com/r/pettyrevenge/comments/10fgrkx/how_i_gutted_my_hoa/
 
 [www.quora.com]
 match = -217.6%%
@@ -114,7 +114,7 @@ url = http://www.leg.state.fl.us/statutes/index.cfm?App_mode=Display_Statute&URL
 [www.flsenate.gov]
 match = -129.4%%
 title = Chapter 720 Section 303 - 2018 Florida Statutes
-url = https://www.flsenate.gov/laws/statutes/2018/720.303
+url = https://www.flsenate.gov/Laws/Statutes/2018/0720.303
 
 [www.navy.mil]
 match = -23.5%%
