--- a/images/ga-chun-uc-16/config.ini
+++ b/images/ga-chun-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-uc-16.html
 lastopen = 2024-06-10 01:12:04
 
 [search]
-lastsearch = 2024-07-31 04:20:50
+lastsearch = 2024-07-31 11:13:07
 
 [bedding.vn]
 match = -123.1%%
@@ -37,9 +37,9 @@ title = Chun Lu
 url = https://scholar.google.co.uk/citations?user=ufM1QgQAAAAJ&hl=th
 
 [www.linkedin.com]
-match = -230.8%%
-title = Joanne Chun - University of California, San Francisco
-url = https://www.linkedin.com/in/joanne-k-chun
+match = -176.9%%
+title = Alicia Chun - Atlanta, Georgia, United States
+url = https://www.linkedin.com/in/alicia-chun-3a385315a
 
 [hanvico.com.vn]
 match = -69.2%%
@@ -47,8 +47,8 @@ title = HANVICO - ẤM ÁP NHƯ LÒNG MẸ
 url = https://hanvico.com.vn/
 
 [demthienkim.com]
-match = -123.1%%
-title = Chăn ga gối Sông Hồng Urban mã mầu UC16
+match = -246.2%%
+title = Chăn ga gối Sông Hồng Urban mã mầu UC16 - Đệm Thiên Kim
 url = https://demthienkim.com/chan-ga-goi-song-hong-uc16/
 
 [foreverbedding.net]
@@ -117,9 +117,9 @@ title = jack l. skinner, ph.d., pe
 url = https://www.mtech.edu/mechanical-engineering/faculty/jack-skinner/docs/cv-jack-skinner.pdf
 
 [researchdirectory.uc.edu]
-match = -323.1%%
-title = Changjoo Kim - UC Research Directory - University of Cincinnati
-url = https://researchdirectory.uc.edu/p/changjkm
+match = -261.5%%
+title = Expert Profile: Je Hyeong Bahk - UC Research Directory
+url = https://researchdirectory.uc.edu/p/bahkjg
 
 [thegioinem.com]
 match = -230.8%%
