--- a/images/man-re-xanh-16/config.ini
+++ b/images/man-re-xanh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-16.html
 lastopen = 2024-06-07 00:33:03
 
 [search]
-lastsearch = 2024-07-31 09:51:02
+lastsearch = 2024-07-31 11:29:22
 
 [www.accessdata.fda.gov]
 match = -142.9%%
@@ -17,9 +17,9 @@ title = Davina Xanh (4/4/2024) - Athlete Awards
 url = https://bigwest.org/awards.aspx?aow=1106
 
 [www.imdb.com]
-match = -14.3%%
-title = The Jungle Book (2016)
-url = https://www.imdb.com/title/tt3040964/
+match = 0.0%%
+title = Green Book (2018)
+url = https://www.imdb.com/title/tt6966692/
 
 [www.etsy.com]
 match = 35.7%%
@@ -152,9 +152,9 @@ title = mindbodygreen: well-rounded well-being for a life well lived
 url = https://www.mindbodygreen.com/
 
 [www.amazon.com]
-match = -257.1%%
-title = eos Shea Better Body Lotion- Vanilla Cashmere, 24-Hour ...
-url = https://www.amazon.com/eos-Cashmere-Moisture-Lightweight-Non-Greasy/dp/B08KT2Z93D
+match = -278.6%%
+title = AXIS-Y Dark Spot Correcting Glow Serum 50ml / 1.69 fl. oz ...
+url = https://www.amazon.com/AXIS-Y-Correcting-Niacinamide-Hyperpigmentation-skintone/dp/B091238V7N
 
 [fptshop.com.vn]
 match = -192.9%%
