--- a/images/nem-pyeoda-thuong-16/config.ini
+++ b/images/nem-pyeoda-thuong-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-16.html
 lastopen = 2024-06-18 17:43:07
 
 [search]
-lastsearch = 2024-07-31 10:47:25
+lastsearch = 2024-07-31 11:44:21
 
 [changagoidemtamhao.com]
 match = -10.0%%
@@ -17,14 +17,14 @@ title = Bộ chăn ga gối Singapore Gold 5 gối Pyeoda 16
 url = https://demsingapore.com/bo-chan-ga-goi-singapore-5-goi-gold-pyeoda-16.html
 
 [demxanh.com]
-match = -100.0%%
-title = Ga gối chun chần Tencel Pyeoda Hàn Quốc đa sắc 3 món 16
-url = https://demxanh.com/ga-goi-chun-chan-tencel-pyeoda-han-quoc-da-sac-3-mon-16.html
+match = -105.0%%
+title = Đệm Xanh-Chuỗi Cửa Hàng Bán Chăn Ga Gối Đệm hàng đầu
+url = https://demxanh.com/
 
 [www.facebook.com]
-match = -80.0%%
-title = Chăn Ga Gối Đệm Pyeoda - Như Tình Yêu Của Mẹ's post
-url = https://www.facebook.com/pyeoda.vn/posts/nệm-lò-xo-bảo-vệ-cột-sống-khỏe-an-vui-đón-tếtmỗi-sáng-thức-dậy-lưng-đau-tinh-thầ/898284118968513/
+match = -75.0%%
+title = Vua Nệm - 🌼 SỞ HỮU BỘ CHĂN GA GẤM CAO CẤP ...
+url = https://www.facebook.com/vuanem.vn/posts/-sở-hữu-bộ-chăn-ga-gấm-cao-cấp-pyeoda-tiết-kiệm-tới-66-vua-nệm-xả-kho-188-39-đồn/1462549323889165/
 
 [shopee.vn]
 match = -25.0%%
